tests/ui/lex_invalid_regex.stderr
error: regex parse error:
           \
           ^
       error: incomplete escape sequence, reached end of pattern prematurely
 --> tests/ui/lex_invalid_regex.rs:5:23
  |
5 |     #[teleparse(regex(r#"\"#))]
  |                       ^^^^^^
